2009-10-21  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bug in shared handling in `ppp' target.

	The latest changesets allowed the `fibonacci' demo program to fail
	by letting an alias to the incoming dependent leak to the outgoing
	write, causing no dependent read to actually occur in the location
	defined by the source program. Synchronization was thus not
	achieved properly.
	
	* tools/lib/t-pppalpha/include/sl_support.h: Clobber the dependent
	in `sl_setp', albeit at a different place than initially.

2009-10-21  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Slight optimization MT-Alpha code generation.
	
	* tools/bin/spp (pppalpha): Allow `end' immediately after a branch.

2009-10-21  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Re-optimize accesses to shareds in `ppp' target.

	The previous changeset was required to prevent incorrect code, but
	would also require a temporary register in all cases, including
	the simple `sl_setp(x, sl_getp(x) + 1)' which should instead be
	optimized to a single instruction. This changeset reintroduces
	this optimization opportunity.
	
	* tools/lib/t-pppalpha/include/sl_support.h: Remove superfluous
	clobber of the incoming shared just before a write to the
	outgoing. (but still clobber it afterwards)

2009-10-20  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix support for shareds in `ppp' target.

	Constructs of the form `sl_setp(x, (foo == 0) ? bar : 0)' would
	cause code generation to write to a shared register twice, which
	is incorrect. (reported by M. Lankamp)
	
	* tools/lib/t-pppalpha/include/sl_support.h: Use a temporary in
	the expansion of `sl_setp' and `sl_seta' to prevent computations
	and control flow between the "guard" asm statemetns.

2009-10-20  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fix.
	
	* lib/seqc.mk (CLEANFILES), 
	* lib/ptl.mk (CLEANFILES): Mention `perf.o'.

2009-10-16  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix `slr' breakage.
	